--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "prisma":{
+    "schema": "Prisma/schema.prisma"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
