--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@prisma/client": "^5.6.0",
     "express": "^4.18.2",
+    "multiparty": "^4.2.3",
     "prisma": "^5.6.0"
   }
 }
