--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,10 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.6.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.0.2",
     "prisma": "^5.6.0"
   }
 }
